sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: not found: value getNombresValeur
    for (i<- 0 to getNombresValeur-2) {
                  ^